--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,7 @@
                 <div class="game-card-content">
                     <h3 class="game-title">Jogo da Velha</h3>
                     <p class="game-desc">Desafie seus amigos ou a IA neste clássico jogo de estratégia. Quem conseguirá formar a linha primeiro?</p>
-                    <a href="index1.html" class="play-btn">Jogar agora</a>
+                    <a href="1.html" class="play-btn">Jogar agora</a>
                 </div>
                 <i class="fas fa-hashtag game-icon"></i>
             </div>
