--- a/index.html
+++ b/index.html
@@ -1259,7 +1259,7 @@
         <h1 class="logo">
             <span class="glitch-effect" data-text="MKGAMES">MKGAMES</span>
         </h1>
-        <p class="tagline">Sua jornada por experiências de jogo extraordinárias</p>
+        <p class="tagline">Sua jornada por experiências de jogo</p>
     </header>
     
     <nav>
@@ -1308,7 +1308,7 @@
                 <div class="game-card-content">
                     <h3 class="game-title">Jogo da Memória</h3>
                     <p class="game-desc">Teste sua memória encontrando os pares correspondentes. Quanto mais rápido, maior sua pontuação!</p>
-                    <a href="index2.html" class="play-btn">Jogar agora</a>
+                    <a href="2.html" class="play-btn">Jogar agora</a>
                 </div>
                 <i class="fas fa-brain game-icon"></i>
             </div>
@@ -1327,7 +1327,7 @@
                 <div class="game-card-content">
                     <h3 class="game-title">Snake (Cobrinha)</h3>
                     <p class="game-desc">Controle a cobrinha, colete comida e cresça sem colidir consigo mesma. Um clássico que nunca sai de moda!</p>
-                    <a href="index3.html" class="play-btn">Jogar agora</a>
+                    <a href="3.html" class="play-btn">Jogar agora</a>
                 </div>
                 <i class="fas fa-snake game-icon"></i>
             </div>
@@ -1343,7 +1343,7 @@
                 <div class="game-card-content">
                     <h3 class="game-title">Pong</h3>
                     <p class="game-desc">O primeiro videogame da história agora em uma versão moderna e futurista. Teste seus reflexos!</p>
-                    <a href="index4.html" class="play-btn">Jogar agora</a>
+                    <a href="4.html" class="play-btn">Jogar agora</a>
                 </div>
                 <i class="fas fa-table-tennis game-icon"></i>
             </div>
@@ -1360,7 +1360,7 @@
                 <div class="game-card-content">
                     <h3 class="game-title">Flappy Bird</h3>
                     <p class="game-desc">Controle o pássaro entre os obstáculos. Parece fácil, mas é surpreendentemente desafiador!</p>
-                    <a href="index5.html" class="play-btn">Jogar agora</a>
+                    <a href="5.html" class="play-btn">Jogar agora</a>
                 </div>
                 <i class="fas fa-dove game-icon"></i>
             </div>
@@ -1379,7 +1379,7 @@
                 <div class="game-card-content">
                     <h3 class="game-title">Quiz de Perguntas</h3>
                     <p class="game-desc">Teste seu conhecimento em diversas categorias com este quiz interativo e desafiador.</p>
-                    <a href="index6.html" class="play-btn">Jogar agora</a>
+                    <a href="6.html" class="play-btn">Jogar agora</a>
                 </div>
                 <i class="fas fa-question-circle game-icon"></i>
             </div>
@@ -1395,7 +1395,7 @@
                 <div class="game-card-content">
                     <h3 class="game-title">Clicker Game</h3>
                     <p class="game-desc">Clique, obtenha recursos, desbloqueie melhorias e veja seu império crescer neste jogo viciante.</p>
-                    <a href="index7.html" class="play-btn">Jogar agora</a>
+                    <a href="7.html" class="play-btn">Jogar agora</a>
                 </div>
                 <i class="fas fa-mouse-pointer game-icon"></i>
             </div>
@@ -1416,7 +1416,7 @@
                 <div class="game-card-content">
                     <h3 class="game-title">Plataforma 2D</h3>
                     <p class="game-desc">Salte entre plataformas, colete moedas e evite inimigos nesta aventura 2D cheia de desafios.</p>
-                    <a href="index8.html" class="play-btn">Jogar agora</a>
+                    <a href="8.html" class="play-btn">Jogar agora</a>
                 </div>
                 <i class="fas fa-running game-icon"></i>
             </div>
@@ -1436,7 +1436,7 @@
                 <div class="game-card-content">
                     <h3 class="game-title">Xadrez</h3>
                     <p class="game-desc">O clássico jogo de estratégia em uma versão moderna. Teste sua habilidade contra a IA ou outro jogador.</p>
-                    <a href="index9.html" class="play-btn">Jogar agora</a>
+                    <a href="9.html" class="play-btn">Jogar agora</a>
                 </div>
                 <i class="fas fa-chess-king game-icon"></i>
             </div>
@@ -1459,7 +1459,7 @@
                 <div class="game-card-content">
                     <h3 class="game-title">Mario Bros</h3>
                     <p class="game-desc">Entre no mundo do encanador mais famoso dos videogames! Salte sobre inimigos, colete moedas e salve a princesa.</p>
-                    <a href="index10.html" class="play-btn">Jogar agora</a>
+                    <a href="10.html" class="play-btn">Jogar agora</a>
                 </div>
                 <i class="fas fa-mushroom game-icon"></i>
             </div>
@@ -1479,7 +1479,7 @@
                 <div class="game-card-content">
                     <h3 class="game-title">Doom</h3>
                     <p class="game-desc">Uma versão simplificada do clássico FPS que revolucionou os jogos. Prepare-se para enfrentar demônios!</p>
-                    <a href="index11.html" class="play-btn">Jogar agora</a>
+                    <a href="11.html" class="play-btn">Jogar agora</a>
                 </div>
                 <i class="fas fa-skull game-icon"></i>
             </div>
