--- a/1.html
+++ b/1.html
@@ -882,7 +882,7 @@
     
     <header>
         <h1 class="logo">JOGO DA VELHA</h1>
-        <p class="tagline">MKGAMES - Versão Futurista</p>
+        <p class="tagline">MKGAMES - Versão 1.1</p>
     </header>
     
     <main>
